--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -16,42 +16,35 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="-5dp"
             android:id="@+id/imgPickMeUp"
             android:layout_gravity="center_horizontal"
             android:src="@drawable/home_pickmeup_1"/>
 
 
 
-        <GridLayout
+        <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="-25dp"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
-            android:columnCount="2"
-            android:rowCount="4"
-            android:orientation="horizontal"
-            tools:context=".GridXMLActivity"
+            android:orientation="vertical"
             android:layout_gravity="center_horizontal"
-            android:background="@drawable/greeting_background"
-            >
+            android:background="@drawable/greeting_background">
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp"
-                android:layout_row="0"
-                android:layout_column="0"
-                android:layout_columnSpan="2">
+                android:layout_marginRight="15dp">
 
                 <TextView
                     android:id="@+id/txtGreeting"
                     android:layout_height="wrap_content"
                     android:layout_width="fill_parent"
                     android:padding="10dp"
-                    android:layout_columnSpan="2"
                     android:text="Good afternoon, Jason"
                     android:textColor="@android:color/black"
                     android:gravity="center"
@@ -74,10 +67,7 @@
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
                 android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp"
-                android:layout_columnSpan="2"
-                android:layout_row="2"
-                android:layout_column="0">
+                android:layout_marginRight="15dp">
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -106,42 +96,46 @@
 
             </LinearLayout>
 
-            <FrameLayout
-                android:layout_row="3"
-                android:layout_column="0"
-                android:layout_columnWeight="1">
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="@color/greeting_grey"/>
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="50dp"
+                android:orientation="horizontal">
+
                 <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:background="@drawable/greeting_background"/>
-            </FrameLayout>
+                    android:id="@+id/txtChangeMyStore"
+                    android:layout_width="fill_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="@string/change_my_store"
+                    android:textAllCaps="true"
+                    android:textAlignment="center"
+                    android:typeface="serif"
+                    android:textColor="@android:color/black"
+                    android:gravity="center" />
 
-            <FrameLayout
-                android:layout_row="3"
-                android:layout_column="1"
-                android:layout_columnWeight="1">
+                <View
+                    android:layout_width="2dp"
+                    android:layout_height="match_parent"
+                    android:background="@color/greeting_grey"/>
+
                 <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
+                    android:id="@+id/txtMyOrders"
+                    android:layout_width="fill_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="@string/my_orders"
+                    android:textAllCaps="true"
+                    android:gravity="center"
+                    android:typeface="serif"
+                    android:textColor="@android:color/black"/>
 
-                    android:background="@drawable/greeting_background" />
-            </FrameLayout>
-
-    <!--
-            <Button
-                android:id="@+id/button3"
-                android:text="Button"
-                android:layout_row="3"
-                android:layout_column="0" />
-
-            <Button
-                android:id="@+id/button4"
-                android:text="Button"
-                android:layout_row="3"
-                android:layout_column="1" />
-    -->
-
-        </GridLayout>
+            </LinearLayout>
+        </LinearLayout>
 
 
         <LinearLayout
